--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -13,6 +13,7 @@ jobs:
         run: echo pr build!
 
   dev-deployment:
+    needs: build
     runs-on: ubuntu-latest
     environment: dev
     steps:
@@ -21,6 +22,7 @@ jobs:
         run: echo pr dev!
 
   uat-deployment:
+    needs: build
     runs-on: ubuntu-latest
     environment: uat
     steps:
